--- a/index.html
+++ b/index.html
@@ -11,3 +11,9 @@
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
+
+<style>
+  body {
+    background-color: #F5F5F0;
+  }
+</style>
