--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>信息科技课堂</title>
+    <title>萧山区信息科技平台</title>
   </head>
   <body>
     <div id="app"></div>
